--- a/main.yml
+++ b/main.yml
@@ -49,4 +49,7 @@
       tags: [ "updatemosquitto", "never" ]
       become: false
 
-
+    - name: Set eth0 static ip address
+      ansible.builtin.import_tasks: tasks/static-ip.yml
+      tags: [ "static-ip", "never" ]
+      become: false
